--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,24 @@
 <resources>
     <string name="app_name">Tapkey SDK Sample</string>
 
-    <!-- Strings related to login -->
     <string name="hint_email">E-mail</string>
     <string name="hint_password">Password</string>
+    <string name="hint_first_name">First name</string>
+    <string name="hint_last_name">Last name</string>
+    <string name="create_new_account">Create new account</string>
+    <string name="create_account">Create account</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="sign_out">Sign Out</string>
+    <string name="refresh">Refresh</string>
     <string name="about">About</string>
-    <string name="key_item__unknown_lock">Unknown Lock</string>
-    <string name="key_item__unknown_owner">Unknown Owner</string>
+
+    <string name="key_item__unknown_lock">Unknown lock</string>
+    <string name="key_item__unknown_issuer">Unknown issuer</string>
+    <string name="key_item__location">Located at %1$s</string>
+    <string name="key_item__unknown_location">Unknown location</string>
+    <string name="key_item_grantee">for %1$s</string>
     <string name="key_item__trigger_button_text">Trigger</string>
     <string name="key_item__cancel_trigger_button_text">Cancel</string>
     <string name="key_item__access_restricted">Restricted access</string>
@@ -21,9 +28,4 @@
     <string name="key_item__trigger_lock_failed">Something went wrong.</string>
     <string name="bluetooth_and_location_inf_header">Bluetooth and location</string>
     <string name="bluetooth_and_location_inf_message">Bluetooth and location must be enabled.</string>
-    <string name="refresh">Refresh</string>
-    <string name="hint_first_name">First name</string>
-    <string name="hint_last_name">Last name</string>
-    <string name="create_new_account">Create new account</string>
-    <string name="create_account">Create account</string>
 </resources>
